--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -97,6 +97,24 @@
                     <Border Grid.Column="1" Background="#FFFFC0C0"/>
                     <Border Grid.Column="2" Background="LightBlue"/>
                 </Grid>
+
+                <!-- Disk view -->
+                <ListView ItemsSource="{Binding DiskViewModel.Disks}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Drive" DisplayMemberBinding="{Binding DriveLetter}"/>
+                            <GridViewColumn Header="Type" DisplayMemberBinding="{Binding DriveType}"/>
+                            <GridViewColumn Header="Media" DisplayMemberBinding="{Binding MediaType}"/>
+                            <GridViewColumn Header="Total" DisplayMemberBinding="{Binding TotalSpace, Converter={StaticResource ByteSizeConverter}}"/>
+                            <GridViewColumn Header="Used" DisplayMemberBinding="{Binding UsedSpace, Converter={StaticResource ByteSizeConverter}}"/>
+                            <GridViewColumn Header="Free" DisplayMemberBinding="{Binding FreeSpace, Converter={StaticResource ByteSizeConverter}}"/>
+                            <GridViewColumn Header="Utilization" DisplayMemberBinding="{Binding Utilization, StringFormat={}{0:F1}%}"/>
+                            <GridViewColumn Header="Active Time (%)" DisplayMemberBinding="{Binding ActiveTime, StringFormat={}{0:F1}%}"/>
+                            <GridViewColumn Header="Read" DisplayMemberBinding="{Binding ReadSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}"/>
+                            <GridViewColumn Header="Write" DisplayMemberBinding="{Binding WriteSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
             </StackPanel>
         </GroupBox>
 
