--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:vm="clr-namespace:DuplicateDetector.ViewModels"
         xmlns:conv="clr-namespace:DuplicateDetector.Converters"
         mc:Ignorable="d"
-        Title="Duplicate Detector" Height="600" Width="900">
+        Title="Duplicate Detector" Height="800" Width="1600">
 
     <Window.DataContext>
         <vm:MainViewModel/>
@@ -102,16 +102,14 @@
                 <ListView ItemsSource="{Binding DiskViewModel.Disks}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Drive" DisplayMemberBinding="{Binding DriveLetter}"/>
-                            <GridViewColumn Header="Type" DisplayMemberBinding="{Binding DriveType}"/>
-                            <GridViewColumn Header="Media" DisplayMemberBinding="{Binding MediaType}"/>
-                            <GridViewColumn Header="Total" DisplayMemberBinding="{Binding TotalSpace, Converter={StaticResource ByteSizeConverter}}"/>
-                            <GridViewColumn Header="Used" DisplayMemberBinding="{Binding UsedSpace, Converter={StaticResource ByteSizeConverter}}"/>
-                            <GridViewColumn Header="Free" DisplayMemberBinding="{Binding FreeSpace, Converter={StaticResource ByteSizeConverter}}"/>
-                            <GridViewColumn Header="Utilization" DisplayMemberBinding="{Binding Utilization, StringFormat={}{0:F1}%}"/>
-                            <GridViewColumn Header="Active Time (%)" DisplayMemberBinding="{Binding ActiveTime, StringFormat={}{0:F1}%}"/>
-                            <GridViewColumn Header="Read" DisplayMemberBinding="{Binding ReadSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}"/>
-                            <GridViewColumn Header="Write" DisplayMemberBinding="{Binding WriteSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}"/>
+                            <GridViewColumn Header="Drive" DisplayMemberBinding="{Binding DriveLetter}" Width="80"/>
+                            <GridViewColumn Header="Total" DisplayMemberBinding="{Binding TotalSpace, Converter={StaticResource ByteSizeConverter}}" Width="80"/>
+                            <GridViewColumn Header="Used" DisplayMemberBinding="{Binding UsedSpace, Converter={StaticResource ByteSizeConverter}}" Width="80"/>
+                            <GridViewColumn Header="Free" DisplayMemberBinding="{Binding FreeSpace, Converter={StaticResource ByteSizeConverter}}" Width="80"/>
+                            <GridViewColumn Header="Utilization" DisplayMemberBinding="{Binding Utilization, StringFormat={}{0:F1}%}" Width="80"/>
+                            <GridViewColumn Header="Active Time (%)" DisplayMemberBinding="{Binding ActiveTime, StringFormat={}{0:F1}%}" Width="80"/>
+                            <GridViewColumn Header="Read" DisplayMemberBinding="{Binding ReadSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}" Width="80"/>
+                            <GridViewColumn Header="Write" DisplayMemberBinding="{Binding WriteSpeed, Converter={StaticResource ByteSizeConverter}, ConverterParameter=speed}" Width="80"/>
                         </GridView>
                     </ListView.View>
                 </ListView>
