--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -243,7 +243,7 @@
                     <DataGridTextColumn Header="Filename" Binding="{Binding Filename}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Size" Binding="{Binding Size, Converter={StaticResource ByteSizeConverter}}" IsReadOnly="True"/>
                     <DataGridTextColumn Header="Hash" Binding="{Binding HashString}" IsReadOnly="True"/>
-                    <DataGridTemplateColumn Header="State" Width="120">
+                    <DataGridTemplateColumn Header="State" Width="120" SortMemberPath="State">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Border Background="Transparent" MouseLeftButtonDown="StateCell_MouseLeftButtonDown" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
