--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:vm="clr-namespace:DuplicateDetector.ViewModels"
         xmlns:conv="clr-namespace:DuplicateDetector.Converters"
         mc:Ignorable="d"
-        Title="Duplicate Detector" Height="800" Width="1600">
+        Title="Duplicate Detector" Height="800" Width="1600"
+        FontFamily="Segoe UI">
 
     <Window.DataContext>
         <vm:MainViewModel/>
@@ -16,6 +17,11 @@
         <conv:ByteSizeConverter x:Key="ByteSizeConverter"/>
         <conv:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
         <conv:PercentToStarConverter x:Key="PercentToStarConverter"/>
+        
+        <!-- Override DataGrid font to Roboto -->
+        <Style TargetType="DataGrid">
+            <Setter Property="FontFamily" Value="Consolas"/>
+        </Style>
     </Window.Resources>
 
     <Grid Margin="10">
