cancel hashing of files when clicked

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -287,6 +287,9 @@
                                                 <DataTrigger Binding="{Binding State}" Value="delete">
                                                     <Setter Property="Cursor" Value="Hand"/>
                                                 </DataTrigger>
+                                                <DataTrigger Binding="{Binding State}" Value="hashing">
+                                                    <Setter Property="Cursor" Value="Hand"/>
+                                                </DataTrigger>
                                             </Style.Triggers>
                                         </Style>
                                     </Border.Style>
